fix: resolve CORS font blocking by hosting Canela fonts locally and adjust script font descender spacing

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Canela';
-  src: url('https://nji.gov.ng/assets/fonts/Canela-Regular.woff2') format('woff2');
+  src: url('./assets/fonts/Canela-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: 'Canela';
-  src: url('https://nji.gov.ng/assets/fonts/Canela-Medium.woff2') format('woff2');
+  src: url('./assets/fonts/Canela-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -20,7 +20,7 @@
 
 @font-face {
   font-family: 'Canela';
-  src: url('https://nji.gov.ng/assets/fonts/Canela-Medium.woff2') format('woff2');
+  src: url('./assets/fonts/Canela-Medium.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
